--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
         - CC=gcc
         - CXX=g++
         - BUILD_TYPE=Debug
-        - BUILD_ARGS='--quick --build-libs shared static --python --tools timem kokkos --cxx-standard=17'
+        - BUILD_ARGS='--quick --build-libs shared --tools timem --cxx-standard=17'
     #
     # GCC 8
     - os: linux
@@ -65,7 +65,7 @@ jobs:
         - CC=clang-6.0
         - CXX=clang++-6.0
         - BUILD_TYPE=Debug
-        - BUILD_ARGS='--quick --build-libs shared static --python --stats --tools ompt --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs shared static --python --stats --tools kokkos --cxx-standard=14'
     # Clang 7
     - os: linux
       dist: bionic
@@ -105,7 +105,7 @@ jobs:
         - CC=gcc-6
         - CXX=g++-6
         - BUILD_TYPE=Release
-        - BUILD_ARGS='--minimal --build-libs static shared --gotcha --python --stats --cxx-standard=14 --extra-optimizations'
+        - BUILD_ARGS='--minimal --build-libs shared --gotcha --python --stats --cxx-standard=14 --extra-optimizations'
     # GCC 7
     - os: linux
       dist: bionic
@@ -151,7 +151,7 @@ jobs:
         - CC=gcc-8
         - CXX=g++-8
         - BUILD_TYPE=RelWithDebInfo
-        - BUILD_ARGS='--build-libs shared --mpi --gperftools --stats --profile=cpu --tools compiler --cxx-standard=17'
+        - BUILD_ARGS='--build-libs shared --mpi --gperftools --stats --profile=cpu --cxx-standard=17'
     # Clang 6.0
     - os: linux
       dist: xenial
